--- a/public/scan-multi.html
+++ b/public/scan-multi.html
@@ -13,7 +13,7 @@
   video { width: 340px; max-width: 100%; border:1px solid var(--bd); border-radius:10px; background:#000; }
   canvas { display:none; }
   .panel { flex:1 1 320px; min-width:320px; }
-  .controls { display:flex; gap:8px; flex-wrap:wrap; margin:8px 0 12px; }
+  .controls { display:flex; gap:8px; flex-wrap:wrap; margin:8px 0 12px; align-items:center; }
   button, .btn { padding: 9px 12px; border-radius: 10px; border:1px solid var(--bd); background:#fff; cursor:pointer; }
   .muted { color: var(--sub); font-size: 12px; }
   .list { margin-top:8px; }
@@ -26,6 +26,8 @@
   input[type="file"]{ display:none; }
   .inline-input { padding:6px 8px; border:1px solid var(--bd); border-radius:8px; }
   .pill { border-radius:999px; }
+  .badge { display:inline-block; background:#eef; color:#224; padding:2px 6px; border-radius:4px; font-size:12px; }
+  #err { color:#b00020; white-space:pre-wrap; }
 </style>
 </head>
 <body>
@@ -33,15 +35,24 @@
 
   <div class="row">
     <div class="panel">
-      <video id="v" autoplay playsinline></video>
+      <video id="v" playsinline muted></video>
       <canvas id="c"></canvas>
       <div class="controls">
         <button id="btnStart">カメラ開始</button>
         <button id="btnStop" disabled>停止</button>
         <button id="btnClear" class="pill">一覧クリア</button>
-        <span class="muted" id="status">準備中…</span>
       </div>
-      <div class="muted">
+
+      <div class="controls">
+        <select id="selDevice"></select>
+        <span id="cap" class="badge"></span>
+        <span class="muted">※背面カメラ推奨。真っ黒時はカメラ切替や解像度低下を試します。</span>
+      </div>
+
+      <div class="muted" id="status">準備中…</div>
+      <div id="err" class="muted"></div>
+
+      <div class="muted" style="margin-top:8px">
         ・QRをかざすと一覧に自動追加（同じ抜型は重複しません）<br>
         ・オンラインならスキャン直後に「位置（LastSeen/ShelfLabel）」を即時更新します<br>
         ・オフラインなら更新を端末にキューし、再接続で自動送信します
@@ -57,33 +68,35 @@
     </div>
   </div>
 
-  <!-- jsQR (pure JS) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jsqr/1.4.0/jsQR.min.js" integrity="sha512-1wF1fNn5r8ZdH1wz8f6+G4uXc3Q3hVtnKkD5U8QJgK4i8fW4f5Q8JkqW6k3Y3p7G8JxTn4vZc1nD2O2U9m6sRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- jsQR (フォールバック用) -->
+  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js" integrity="sha256-0KpQz5M6v9f2PitmT8mH1g2S7T0wj6Q5U8Xy5NIVl9c=" crossorigin="anonymous"></script>
 
   <script>
-  // --- Service Worker 登録（ルート /sw.js をスコープに） ---
+  // --- Service Worker 登録 ---
   if ("serviceWorker" in navigator) {
     navigator.serviceWorker.register("/sw.js").catch(console.warn);
   }
 
   // --- 簡易ユーティリティ ---
-  const $ = (q)=>document.querySelector(q);
-  const statusEl = $("#status");
-  const v = $("#v");
-  const c = $("#c");
-  const ctx = c.getContext("2d");
+  const $  = (q)=>document.querySelector(q);
+  const v  = $("#v");
+  const c  = $("#c");
+  const ctx = c.getContext("2d", { willReadFrequently: true });
   const listEl = $("#list");
   const labelInput = $("#labelInput");
+  const statusEl = $("#status");
+  const errEl = $("#err");
+  const selDevice = $("#selDevice");
+  const cap = $("#cap");
 
-  // 既定棚ラベル（必要に応じて適宜変更）
   labelInput.value = "scan-multi";
-
-  const scanned = new Map(); // key = `${bn}-${wc}`, val = row data object
-  const QUEUE_KEY = "die-seen-queue-v1"; // オフライン位置更新キュー
+  const scanned = new Map(); // key= `${bn}-${wc}`, val=row
+  const QUEUE_KEY = "die-seen-queue-v1";
 
   const setStatus = (t)=> statusEl.textContent = t;
+  const setError  = (t)=> errEl.textContent    = t || "";
 
-  // #d=BASE64URL(JSON) を復号
+  // --- #d=BASE64URL(JSON) を復号 ---
   function parseHashData(url) {
     try {
       const u = new URL(url);
@@ -97,46 +110,26 @@
     } catch { return null; }
   }
 
-  // QR文字列（URL or プレーン）から項目を抽出
+  // --- QR文字列（URL or プレーン）から抽出 ---
   function parseFromQr(text) {
-    // 1) #d にオフライン情報があるなら最優先
     const d = parseHashData(text);
     if (d) {
-      return {
-        src: text,
-        wc: (d.wc||"").trim(),
-        wn: (d.wn||"").trim(),   // WorkName
-        bn: (d.bn||"").trim(),   // BookName
-        kn: (d.kn||"").trim(),
-        ps: (d.ps||"").trim(),
-        cs: (d.cs||"").trim(),
-      };
+      return { src:text, wc:(d.wc||"").trim(), wn:(d.wn||"").trim(), bn:(d.bn||"").trim(), kn:(d.kn||"").trim(), ps:(d.ps||"").trim(), cs:(d.cs||"").trim() };
     }
-    // 2) 通常のクエリ ?book=&wc= から抽出
     try {
       const u = new URL(text);
       const p = u.searchParams;
-      return {
-        src:text,
-        wc:(p.get("wc")||"").trim(),
-        wn:"", // 取れないので空
-        bn:(p.get("book")||"").trim(),
-        kn:"",
-        ps:"",
-        cs:"",
-      };
+      return { src:text, wc:(p.get("wc")||"").trim(), wn:"", bn:(p.get("book")||"").trim(), kn:"", ps:"", cs:"" };
     } catch {
-      // 3) プレーンテキストは暫定的に WorkName に入れて保持
       return { src:text, wc:"", wn:text, bn:"", kn:"", ps:"", cs:"" };
     }
   }
-
   function keyOf(row) {
     if (row.bn && row.wc) return `${row.bn}-${row.wc}`;
-    return row.src; // フォールバック
+    return row.src;
   }
 
-  // --- 位置更新（オンラインなら即、オフラインはキュー） ---
+  // --- オフラインキュー ---
   function enqueue(job) {
     const q = JSON.parse(localStorage.getItem(QUEUE_KEY) || "[]");
     q.push(job);
@@ -167,11 +160,7 @@
     const payload = { book, wc, label };
     if (navigator.onLine) {
       try {
-        const r = await fetch("/api/seen", {
-          method:"POST",
-          headers:{ "Content-Type":"application/json" },
-          body: JSON.stringify(payload),
-        });
+        const r = await fetch("/api/seen", { method:"POST", headers:{ "Content-Type":"application/json" }, body: JSON.stringify(payload) });
         if (!r.ok) throw new Error("bad");
         setStatus(`位置更新: ${book}-${wc} (${label||"-"})`);
       } catch {
@@ -187,7 +176,7 @@
   // --- 一覧レンダリング ---
   function render() {
     listEl.innerHTML = "";
-    for (const [k,row] of scanned) {
+    for (const [,row] of scanned) {
       const el = document.createElement("div");
       el.className = "item";
       el.innerHTML = `
@@ -203,19 +192,14 @@
         </div>
       `;
       // 写真アップロード
-      const fileInput = el.querySelector('input[type="file"]');
-      fileInput.addEventListener("change", async (ev)=>{
+      el.querySelector('input[type="file"]').addEventListener("change", async (ev)=>{
         const file = ev.target.files?.[0];
         if (!file) return;
         if (!row.bn || !row.wc) { alert("BookName / WorkCord が足りません"); return; }
         const dieId = `${row.bn}-${row.wc}`;
 
         try {
-          const tRes = await fetch("/api/photo-token", {
-            method:"POST",
-            headers:{ "Content-Type":"application/json" },
-            body: JSON.stringify({ dieId, purpose:"scan-multi" })
-          }).then(r=>r.json());
+          const tRes = await fetch("/api/photo-token", { method:"POST", headers:{ "Content-Type":"application/json" }, body: JSON.stringify({ dieId, purpose:"scan-multi" }) }).then(r=>r.json());
           if (!tRes.token) throw new Error("token error");
 
           const fd = new FormData();
@@ -230,7 +214,7 @@
         } catch (e) {
           alert("アップロード失敗: " + e.message);
         } finally {
-          ev.target.value = ""; // 同じファイルでも再選択可に
+          ev.target.value = ""; // 同じファイル再選択OK
         }
       });
 
@@ -244,47 +228,150 @@
     }
   }
 
-  // --- カメラ & スキャンループ ---
-  let stream = null, rafId = null;
-  async function startCam() {
-    try {
-      stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" }, audio:false });
-      v.srcObject = stream;
-      $("#btnStart").disabled = true;
-      $("#btnStop").disabled = false;
-      setStatus("スキャン中…");
-      tick();
-    } catch (e) {
-      alert("カメラを開けませんでした: " + e.message);
-      setStatus("カメラ起動失敗");
+  // === カメラ & スキャン（BarcodeDetector → jsQR フォールバック） ===
+  let stream = null, rafId = null, detector = null, useBarcodeDetector = ('BarcodeDetector' in window);
+  let currentDeviceId = null;
+  cap.textContent = useBarcodeDetector ? "BarcodeDetector" : "jsQR";
+
+  async function listCameras() {
+    const devices = await navigator.mediaDevices.enumerateDevices();
+    const cams = devices.filter(d => d.kind === 'videoinput');
+    selDevice.innerHTML = '';
+    cams.forEach((c, i) => {
+      const opt = document.createElement('option');
+      opt.value = c.deviceId;
+      opt.textContent = c.label || `カメラ ${i+1}`;
+      selDevice.appendChild(opt);
+    });
+    if (!currentDeviceId && cams.length) {
+      currentDeviceId = cams[0].deviceId; // 既定を決める（真っ黒回避）
+      selDevice.value = currentDeviceId;
+    } else if (currentDeviceId) {
+      const m = Array.from(selDevice.options).find(o => o.value === currentDeviceId);
+      if (m) selDevice.value = currentDeviceId;
     }
   }
+
   function stopCam() {
-    if (rafId) cancelAnimationFrame(rafId);
-    if (stream) stream.getTracks().forEach(t=>t.stop());
-    stream = null;
+    cancelAnimationFrame(rafId); rafId = null;
+    if (stream) { stream.getTracks().forEach(t=>t.stop()); stream = null; }
     $("#btnStart").disabled = false;
-    $("#btnStop").disabled = true;
+    $("#btnStop").disabled  = true;
     setStatus("停止中");
   }
+
+  function showError(e) {
+    console.error(e);
+    setError(`❌ ${e.name || ''} ${e.message || e}`);
+    if (e.name === 'NotAllowedError') setError(errEl.textContent + '\nブラウザやWindowsのカメラ権限を許可してください。');
+    if (e.name === 'NotFoundError')  setError(errEl.textContent + '\nカメラが見つかりません。外付けカメラ/別デバイスを選択してください。');
+    if (e.name === 'NotReadableError') setError(errEl.textContent + '\n他のアプリ（Teams/Zoom/カメラ）が使用中の可能性があります。');
+  }
+
+  async function startCam() {
+    stopCam();
+    setError("");
+    // できるだけ軽めの解像度で開始（Edge対策）
+    const constraints = {
+      video: currentDeviceId ? { deviceId: { exact: currentDeviceId }, width:{ideal:640}, height:{ideal:480} }
+                             : { facingMode: { ideal: 'environment' }, width:{ideal:640}, height:{ideal:480} },
+      audio: false
+    };
+    try {
+      stream = await navigator.mediaDevices.getUserMedia(constraints);
+    } catch (e) {
+      showError(e);
+      // 最後の手段：解像度をさらに落として再試行
+      try {
+        stream = await navigator.mediaDevices.getUserMedia({ video: { width:320, height:240 }, audio:false });
+      } catch (e2) {
+        showError(e2);
+        setStatus("カメラ起動失敗");
+        return;
+      }
+    }
+    v.srcObject = stream;
+    try {
+      await v.play();
+    } catch (e) {
+      showError(e);
+      setStatus("再生失敗");
+      return;
+    }
+    $("#btnStart").disabled = true;
+    $("#btnStop").disabled  = false;
+    await listCameras();
+    setStatus("スキャン中…");
+
+    // Detector 準備
+    detector = null;
+    if (useBarcodeDetector) {
+      try {
+        detector = new BarcodeDetector({ formats: ['qr_code'] });
+      } catch (e) {
+        useBarcodeDetector = false;
+        detector = null;
+      }
+    }
+    tick();
+  }
+
+  function drawBoxes(boxes, color = 'rgba(0,255,0,0.8)') {
+    ctx.strokeStyle = color;
+    ctx.lineWidth = 3;
+    for (const b of boxes) {
+      ctx.beginPath();
+      ctx.moveTo(b[0].x, b[0].y);
+      for (let i=1;i<b.length;i++) ctx.lineTo(b[i].x, b[i].y);
+      ctx.closePath();
+      ctx.stroke();
+    }
+  }
+
   async function tick() {
     if (!stream) return;
-    if (v.readyState === v.HAVE_ENOUGH_DATA) {
+    if (v.videoWidth) {
       c.width = v.videoWidth;
       c.height = v.videoHeight;
       ctx.drawImage(v, 0, 0, c.width, c.height);
-      const imageData = ctx.getImageData(0, 0, c.width, c.height);
-      const code = jsQR(imageData.data, c.width, c.height);
-      if (code && code.data) {
-        const text = code.data.trim();
-        const row = parseFromQr(text);
-        const key = keyOf(row);
-        if (!scanned.has(key)) {
-          scanned.set(key, row);
-          render();
-          // スキャン直後に位置更新（オンライン時）/ オフラインはキュー
-          if (row.bn && row.wc) {
-            updateSeen(row.bn, row.wc, labelInput.value || "scan-multi");
+
+      let found = [];
+      if (useBarcodeDetector && detector) {
+        try {
+          const barcodes = await detector.detect(c);
+          for (const b of barcodes) {
+            found.push({ raw: b.rawValue, corners: b.cornerPoints });
+          }
+        } catch (e) {
+          // Safari等で失敗したらフォールバックに切替
+          useBarcodeDetector = false;
+        }
+      }
+
+      if (!useBarcodeDetector) {
+        // jsQR（単一検出）フォールバック
+        const img = ctx.getImageData(0, 0, c.width, c.height);
+        const hit = jsQR(img.data, img.width, img.height, { inversionAttempts:'attemptBoth' });
+        if (hit) {
+          found.push({
+            raw: hit.data,
+            corners: [hit.location.topLeftCorner, hit.location.topRightCorner, hit.location.bottomRightCorner, hit.location.bottomLeftCorner]
+          });
+        }
+      }
+
+      if (found.length) {
+        drawBoxes(found.map(f => f.corners));
+        for (const f of found) {
+          const text = (f.raw || "").trim();
+          const row = parseFromQr(text);
+          const key = keyOf(row);
+          if (!scanned.has(key)) {
+            scanned.set(key, row);
+            render();
+            if (row.bn && row.wc) {
+              updateSeen(row.bn, row.wc, labelInput.value || "scan-multi");
+            }
           }
         }
       }
@@ -292,12 +379,11 @@
     rafId = requestAnimationFrame(tick);
   }
 
-  // --- ボタン ---
-  $("#btnStart").addEventListener("click", startCam);
+  // --- UIイベント ---
+  $("#btnStart").addEventListener("click", startCam);   // iOS/Edge対策：ユーザ操作で開始
   $("#btnStop").addEventListener("click", stopCam);
-  $("#btnClear").addEventListener("click", ()=>{
-    scanned.clear(); render(); setStatus("一覧をクリアしました");
-  });
+  $("#btnClear").addEventListener("click", ()=>{ scanned.clear(); render(); setStatus("一覧をクリアしました"); });
+
   $("#applyAll").addEventListener("click", async ()=>{
     const label = labelInput.value || "scan-multi";
     for (const [,row] of scanned) {
@@ -305,11 +391,17 @@
     }
   });
 
-  // 起動時処理：可能なら即カメラ、未送キュー送信
-  (async ()=>{
-    await flushQueue();
-    if (navigator.mediaDevices?.getUserMedia) startCam();
-  })();
+  selDevice.addEventListener("change", async (e)=>{
+    currentDeviceId = e.target.value || null;
+    await startCam();
+  });
+
+  // ページ遷移/非表示で停止
+  window.addEventListener("pagehide", stopCam);
+  window.addEventListener("visibilitychange", ()=>{ if (document.visibilityState === 'hidden') stopCam(); });
+
+  // 起動時：キュー送信のみ。カメラはユーザー操作で開始（自動再生ポリシー対策）
+  (async ()=>{ await flushQueue(); if (navigator.mediaDevices?.enumerateDevices) await listCameras(); })();
   </script>
 </body>
 </html>
